--- a/.github/workflows/main_ingsoftwareproject.yml
+++ b/.github/workflows/main_ingsoftwareproject.yml
@@ -26,7 +26,7 @@ jobs:
         run: dotnet build --configuration Release
         
       - name: Run test with NUnit
-        run: dotnet test --no-restore -verbosity normal
+        run: dotnet test --no-restore --verbosity normal
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
